syntax = "proto3";

import "details.proto";

message GetAllAreasResponseData {
    repeated AreaDetail areas = 1;
}

message GetAllAreasResponse {
    GetAllAreasResponseData data = 1;
    string message = 2;
    string status = 3;
}

message CreateAreaRequest {
    AreaDetail area_detail = 1;
}

message CreateAreaResponseData {
    AreaDetail area_detail = 1;
}

message CreateAreaResponse {
    CreateAreaResponseData data = 1;
    string message = 2;
    string status = 3;
}

message GetAreaByIdRequest {
    string _id = 1;
}


message GetAreaByIdResponseData {
    AreaDetail area_detail = 1;
}


message GetAreaByIdResponse {
    GetAreaByIdResponseData data = 1;
    string message = 2;
    string status = 3;
}


service AreaService {
    rpc GetAllAreas (Empty) returns (GetAllAreasResponse) {};
    rpc CreateArea (CreateAreaRequest) returns (CreateAreaResponse) {};
    rpc GetAreaById (GetAreaByIdRequest) returns (GetAreaByIdResponse) {};
}

message Empty {}
